--- a/UI/LopHoc/UI_LopHoc.form
+++ b/UI/LopHoc/UI_LopHoc.form
@@ -6,10 +6,10 @@
       <Color blue="ff" green="f5" red="e6" type="rgb"/>
     </Property>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[1350, 660]"/>
+      <Dimension value="[1350, 634]"/>
     </Property>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[1350, 660]"/>
+      <Dimension value="[1350, 634]"/>
     </Property>
   </Properties>
   <AuxValues>
@@ -29,49 +29,49 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="jspLH" min="-2" pref="1280" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
                       <Component id="lblTimLop" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="txtTimLop" min="-2" pref="250" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="ckLopDong" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="474" max="-2" attributes="0"/>
+                      <Component id="btnChiTietLop" min="-2" pref="35" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
-                      <Component id="btnChiTietLop" min="-2" pref="50" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="100" max="-2" attributes="0"/>
-                      <Component id="btnThemLop" min="-2" pref="50" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
-                      <Component id="btnCapNhatLop" min="-2" pref="50" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
-                      <Component id="btnXoaLop" min="-2" pref="50" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
+                      <Component id="btnThemLop" min="-2" pref="35" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="btnCapNhatLop" min="-2" pref="35" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="btnXoaLop" min="-2" pref="35" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jspLH" min="-2" pref="1280" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="btnXoaLop" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
-                      <Component id="btnCapNhatLop" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
-                      <Component id="btnThemLop" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
-                      <Component id="btnChiTietLop" min="-2" pref="50" max="-2" attributes="0"/>
-                      <Group type="103" alignment="1" groupAlignment="3" attributes="0">
-                          <Component id="lblTimLop" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
-                          <Component id="txtTimLop" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
-                      </Group>
+              <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="btnChiTietLop" alignment="1" min="-2" pref="35" max="-2" attributes="0"/>
+                  <Group type="103" alignment="1" groupAlignment="3" attributes="0">
+                      <Component id="txtTimLop" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
+                      <Component id="lblTimLop" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
+                      <Component id="ckLopDong" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="ckLopDong" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnThemLop" alignment="1" min="-2" pref="35" max="-2" attributes="0"/>
+                  <Component id="btnCapNhatLop" alignment="1" min="-2" pref="35" max="-2" attributes="0"/>
+                  <Component id="btnXoaLop" alignment="1" min="-2" pref="35" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
               <Component id="jspLH" min="-2" pref="535" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
